--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+#calendar {
+  width: 350px;
+  height: 240px;
+  border: 1px solid black;
+}
+#calendar > table {
+  border-spacing: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#calendar .calendarTitle {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  height: 44px;
+  margin-bottom: 16px;
+}
+#calendar .calendarTitle div {
+  font-size: 16px;
+}
+
+#calendar > .calendarTitle > div.iconLeft,
+#calendar > .calendarTitle > div.iconRight {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  font-size: 16px;
+  background-color: white;
+}
+#calendar div:first-child > div.iconLeft:hover,
+#calendar div:first-child > div.iconRight:hover {
+  background-color: #e6e6e6;
 }
 
-.App-link {
-  color: #61dafb;
+#calendar > table > tbody > tr > td {
+  text-align: center;
+  cursor: pointer;
+  width: 50px;
+  height: 36px;
+  padding: 0;
+  text-align: "center";
+  font-size:  16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#calendar > table > tbody > tr > td:hover {
+  background-color: #e6e6e6;
 }
